--- a/index.html
+++ b/index.html
@@ -1,11 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Olá Mundo Novo</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <title>Agrotech - Login</title>
+  </head>
+  <body>
+    <header>
+      <div class="logo">
+        <h1>Agrotech</h1>
+      </div>
+      <div>
+        <h3>Login</h3>
+      </div>
+    </header>
+    <div class="container-wrapper">
+      <div class="container">
+        <div class="login_wrapper">
+          <div class="login">
+            <form action="#" class="login-background">
+              <h2>Login</h2>
+              <div class="login-inputs">
+                <input
+                  class=""
+                  type="email"
+                  id="email"
+                  name="email"
+                  placeholder="E-mail"
+                  required
+                />
+
+                <input
+                  type="password"
+                  id="password"
+                  name="password"
+                  placeholder="Senha"
+                  required
+                />
+              </div>
+              <div class="links">
+                <a href="cadastro.html">Criar uma conta</a>
+              </div>
+              <div>
+                <button id="btn_login" class="btn">Entrar</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
